# getcodelimit.github.io

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
assets/: scan.cast
configuration/: index.html
development/: index.html
docs/: configuration.md  development.md  faq.md  index.md  why-function-length.md
docs/getting-started/: development-workflow.md  standalone-usage.md
faq/: index.html
getting-started/development-workflow/: index.html
getting-started/standalone-usage/: index.html
quickstart/: index.html
search/: search_index.json
usage/: index.html
why-function-length/: index.html
