[project]
name = "getcodelimit"
version = "0.1.0"
description = ""
authors = [{ name = "Rob van der Leek", email = "robvanderleek@gmail.com" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = "GPL-3.0-or-later"

[dependency-groups]
dev = [
    "mkdocs-material>=9.5.10,<10",
    "mkdocs-glightbox>=0.3.7,<0.4",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
